--- a/src/assets/styles/galleryShows.scss
+++ b/src/assets/styles/galleryShows.scss
@@ -288,8 +288,9 @@
 
   h1{
     color: darken($purple, 10%);
-    font-size: 5rem;
-    margin: 0 0 1rem 0;
+    font-size: 4rem;
+    margin: 0 0 0.5rem 0;
+    line-height: 90%;
     @include media ("screen", "<=phone") {
       font-size: 2.3rem;
     }
@@ -306,6 +307,65 @@
   p{
     @include media ("screen", "<=phone") {
       font-size: 0.9rem;
+    }
+  }
+  .linkbtn{
+    position: relative;
+    z-index: 50;
+    width: 400px;
+    height: 100px;
+    padding: 0 0.5rem;
+    transition: transform 500ms ease-in-out;
+    -webkit-transition: transform 500ms ease-in-out;
+    -moz-transition: transform 500ms ease-in-out;
+      
+    @include media ("screen", "<=phone") {
+      position: relative;
+      z-index: 100;
+      width: 300px;
+      height: 70px;
+    }
+      
+  &:hover{
+    transform: translate3d(6px, 0, 0);
+    -webkit-transform: translate3d(6px, 0, 0);
+    -moz-transform: translate3d(6px, 0, 0);
+  }
+        
+  .circlelink{
+    background: #3a023d;
+    opacity: 0.5;
+    background-blend-mode: difference;
+    border-radius: 50%;
+    height: 70px;
+    width: 70px;
+    position: absolute;
+    top: 1rem;
+    left: -0.3rem;
+    z-index: 50;
+      @include media ("screen", "<=phone") {
+        height: 65px;
+        width: 65px;
+      }
+  }
+  .linktext{
+    position: relative;
+    z-index: 50;
+    width: 400px;
+    transform: translate(12px, 28.8px);
+    font-size: 1.8rem;
+    font-weight: 700;
+    color: #1d031f;
+    mix-blend-mode: difference;
+      
+    @include media ("screen", "<=phone") {
+      width: 250px;
+      top: 0.3rem;
+      left: 0;
+      font-size: 1.4rem;
+      position: relative;
+      z-index: 100;
+      }
     }
   }
 }
